test json validate

--- a/.github/workflows/validate-json.yml
+++ b/.github/workflows/validate-json.yml
@@ -21,7 +21,12 @@ jobs:
 
       - name: Check JSON
         run: |
-          JSON=$(cat config/lib/armbian-config/config.jobs.json | jq)
-          EMPTY=$(cat config/lib/armbian-configng/config.jobs.json | jq | nl | grep '"author": ""' | awk '{print $1}' | paste -s -d, -)
-          echo "## Warning: Empty author field in lines:" >> $GITHUB_STEP_SUMMARY
-          echo $EMPTY >> $GITHUB_STEP_SUMMARY
+          for file in config/tools/json/*.json; do
+            JSON=$(cat "$file" | jq)
+            EMPTY=$(cat "$file" | jq | nl | grep '"author": ""' | awk '{print $1}' | paste -s -d, -)
+            if [ -n "$EMPTY" ]; then
+              echo "## Warning: Empty author field in $file at lines:" >> $GITHUB_STEP_SUMMARY
+              echo $EMPTY >> $GITHUB_STEP_SUMMARY
+            fi
+          done
+
