Add to Portainer to JSON menu

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -439,6 +439,24 @@
                             "status": "Stable",
                             "author": "@schwar3kat",
                             "condition": "! check_if_installed docker-ce && [ -d /var/lib/docker ]"
+                        },
+                        {
+                            "id": "CON004",
+                            "description": "Install Portainer",
+                            "prompt": "This operation will install Portainer.\nWould you like to continue?",
+                            "command": ["module_portainer install"],
+                            "status": "Stable",
+                            "author": "@armbian",
+                            "condition": "! module_portainer status"
+                        },
+                        {
+                            "id": "CON005",
+                            "description": "Remove Portainer",
+                            "prompt": "This operation will delete Portainer container.\nWould you like to continue?",
+                            "command": ["module_portainer uninstall"],
+                            "status": "Stable",
+                            "author": "@armbian",
+                            "condition": "module_portainer status"
                         }
                     ]
                 },
