Introduce new parameter that will execute a script prior to packing

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,6 +21,7 @@ jobs:
       homepage: "https://www.armbian.com"
       section: "default"
       priority: "optional"
+      compile: "tools/config-assemble.sh -p"
       depends: "bash, jq, whiptail, sudo, procps, systemd, lsb-release, iproute2"
       description: "Armbian config: The Next Generation"
 
