--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -214,14 +214,7 @@
                     "id": "SY008",
                     "description": "Change shell system wide to BASH",
                     "about": "This will switch system wide shell to BASH",
-                    "command": [
-                        "export BASHLOCATION=$(grep /bash$ /etc/shells | tail -1)",
-                        "sed -i \"s|^SHELL=.*|SHELL=${BASHLOCATION}|\" /etc/default/useradd",
-                        "sed -i \"s|^DSHELL=.*|DSHELL=${BASHLOCATION}|\" /etc/adduser.conf",
-                        "apt_install_wrapper apt-get -y purge armbian-zsh zsh-common zsh tmux",
-                        "update_skel",
-                        "awk -F'[/:]' '{if ($3 >= 1000 && $3 != 65534 || $3 == 0) print $1}' /etc/passwd | xargs -L1 chsh -s $(grep /bash$ /etc/shells | tail -1)"
-                    ],
+                    "command": [ "manage_zsh disable" ],
                     "status": "Stable",
                     "author": "@igorpecovnik",
                     "condition": "[[ $(cat /etc/passwd | grep \"^root:\" | rev | cut -d\":\" -f1 | cut -d\"/\" -f1| rev) == \"zsh\" ]]"
@@ -230,14 +223,7 @@
                     "id": "SY009",
                     "description": "Change shell system wide to ZSH",
                     "about": "This will switch system wide shell to ZSH",
-                    "command": [
-                        "export ZSHLOCATION=$(grep /zsh$ /etc/shells | tail -1)",
-                        "sed -i \"s|^SHELL=.*|SHELL=${ZSHLOCATION}|\" /etc/default/useradd",
-                        "sed -i \"s|^DSHELL=.*|DSHELL=${ZSHLOCATION}|\" /etc/adduser.conf",
-                        "apt_install_wrapper apt-get -y install armbian-zsh zsh-common zsh tmux",
-                        "update_skel",
-                        "awk -F'[/:]' '{if ($3 >= 1000 && $3 != 65534 || $3 == 0) print $1}' /etc/passwd | xargs -L1 chsh -s $(grep /zsh$ /etc/shells | tail -1)"
-                    ],
+                    "command": [ "manage_zsh enable" ],
                     "status": "Stable",
                     "author": "@igorpecovnik",
                     "condition": "[[ $(cat /etc/passwd | grep \"^root:\" | rev | cut -d\":\" -f1 | cut -d\"/\" -f1| rev) == \"bash\" ]]"
