--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -7,6 +7,7 @@
                 {
                     "id": "Desktops",
                     "description": "Desktop Environments",
+                    "status": "Disabled",
                     "sub": [
                         {
                             "id": "XFCE",
